--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
   <p><strong>A</strong>: Too complicated to implement.</p>
 
   <hr/>
-  <p>Made with ✨ by multitool++ devs</p>
+  <p>&copy; <span id="copyright_year"></span> multitool++ contributors. Licensed under the <a href="./LICENSE">GPL3.0</a></p>
 </body>
 </html>
