--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <p>&copy; <span id="copyright_year"></span> multitool++ contributors. Licensed under the <a href="./LICENSE">GPL3.0</a></p>
   <script>
     // get current year to update copyright_year element accordingly
-    const currentYear = new Date().getFullYear():
+    const currentYear = new Date().getFullYear();
 
     document.getElementById('copyright_year').textContent = currentYear;
   </script>
