--- a/index.html
+++ b/index.html
@@ -52,14 +52,6 @@
   <h1>multitool++</h1>
   <h2>Cross-platform multitool written in C++</h2>
 
-  <h3>IMPORTANT ANNOUNCEMENT</h3>
-  <img src="https://github.com/user-attachments/assets/47d9ef92-4ac4-4f0f-a5b5-31a59ee4c978" alt="false positive warning" />
-  <p>
-    As of this being wrote, our Windows binary is currently detected by multiple antivirus engines on VirusTotal. If you have the time, please report this as a false positive! The program is <strong>NOT</strong> malware. 
-    See the AnyRun report 
-    <a href="https://web.archive.org/web/20250505193713/https://any.run/report/bfeb2d8a414bfedc9124072c483acee0a62a9c4f28174ef483b97fba27165b2f/248a5c03-3969-4b37-833a-00c973f34281" target="_blank">here</a>.
-  </p>
-
   <h2>Installation</h2>
 
   <h3>Prerequisites</h3>
@@ -80,10 +72,12 @@
     You can easily download and run a precompiled binary from the releases.
   </p>
 
-  <h2>Source Code</h2>
+  <h2>IMPORTANT ANNOUNCEMENT</h2>
+  <img src="https://github.com/user-attachments/assets/47d9ef92-4ac4-4f0f-a5b5-31a59ee4c978" alt="false positive warning" />
   <p>
-    The software is fully open source and copylefted under the 
-    <a href="./LICENSE">GNU GPL v3.0</a>.
+    As of this being wrote, our Windows binary is currently detected by multiple antivirus engines on VirusTotal. If you have the time, please report this as a false positive! The program is <strong>NOT</strong> malware. 
+    See the AnyRun report 
+    <a href="https://web.archive.org/web/20250505193713/https://any.run/report/bfeb2d8a414bfedc9124072c483acee0a62a9c4f28174ef483b97fba27165b2f/248a5c03-3969-4b37-833a-00c973f34281" target="_blank">here</a>.
   </p>
 
   <h2>FAQ</h2>
@@ -94,7 +88,7 @@
   <p><strong>A</strong>: Too complicated to implement.</p>
 
   <hr/>
-  <p>&copy; <span id="copyright_year"></span> multitool++ contributors. Licensed under the <a href="./LICENSE">GPL3.0</a></p>
+  <p>&copy; <span id="copyright_year"></span> multitool++ contributors. Licensed under the <a href="./LICENSE">GNU GPL v3.0</a></p>
   <script>
     // get current year to update copyright_year element accordingly
     const currentYear = new Date().getFullYear();
