--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <p><strong>A</strong>: Too complicated to implement.</p>
 
   <hr/>
-  <p>&copy; <span id="copyright_year"></span> multitool++ contributors. Licensed under the <a href="./LICENSE">GNU GPL v3.0</a></p>
+  <p>&copy; <span id="copyright_year"></span> multitool++ contributors. Licensed under the <a href="./LICENSE">GNU GPL v3.0.</a></p>
   <script>
     // get current year to update copyright_year element accordingly
     const currentYear = new Date().getFullYear();
