--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <p><a href="https://github.com/benja2998/multitoolplusplus">View on GitHub </a></p>
+  <p><a href="https://github.com/benja2998/multitoolplusplus">View on GitHub </a><a href="https://github.com/benja2998/multitoolplusplus/releases>">See releases </a></p>
   <title>multitool++</title>
   <style>
     body {
