--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <p><a href="https://github.com/benja2998/multitoolplusplus">View on GitHub </a><a href="https://github.com/benja2998/multitoolplusplus/releases>">See releases </a></p>
-  <title>multitool++</title>
+  <p><a href="https://github.com/benja2998/multitoolplusplus">View on GitHub </a><a href="https://github.com/benja2998/multitoolplusplus/releases"> See releases </a></p>
+  <p><a href="https://github.com/benja2998/multitoolplusplus/releases/latest/download/main-windows.exe">Download directly for Windows </a> <a href="https://github.com/benja2998/multitoolplusplus/releases/latest/download/main-linux"> Download directly for Linux </a></p>
+  <title>multitool++</title>d
   <style>
     body {
       font-family: system-ui, sans-serif;
