--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!-- Title and description for search engine results -->
+  <meta name="description" content="multitool++: A cross-platform multitool written in C++ for Windows and Linux. Download precompiled binaries or build from source.">
+  <meta name="keywords" content="multitool++, C++, Windows, Linux, precompiled binaries, build from source, antivirus, false positive">
+  
+  <!-- Open Graph for social media previews -->
+  <meta property="og:title" content="multitool++" />
+  <meta property="og:description" content="Cross-platform multitool written in C++ for Windows and Linux." />
+  <meta property="og:url" content="https://benja2998.github.io/multitoolplusplus/" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card meta for better visibility on Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="multitool++">
+  <meta name="twitter:description" content="Cross-platform multitool written in C++ for Windows and Linux." />
+
+  <!-- Search Engine meta for better indexing -->
+  <meta name="robots" content="index, follow">
+  
   <p><a href="https://github.com/benja2998/multitoolplusplus">View on GitHub |</a><a href="https://github.com/benja2998/multitoolplusplus/releases"> See releases </a></p>
   <p><a href="https://github.com/benja2998/multitoolplusplus/releases/latest/download/main-windows.exe">Download directly for Windows |</a> <a href="https://github.com/benja2998/multitoolplusplus/releases/latest/download/main-linux"> Download directly for Linux </a></p>
   <title>multitool++</title>
